--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --ext ts,js --exec ts-node src/server.ts"
+    "dev": "nodemon --watch src --ext ts,js --exec ts-node src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
